# scMIL_residual

./: LICENSE  README.md  download  pyproject.toml
configs/: gor_experimental.yaml  residual_baseline.yaml
docs/: README_model.md  method.md
notebooks/: gor_v2_step_by_step_anti_collapse.ipynb  gor_v3_anti_collapse.ipynb  load_data&preprocess.ipynb  residual_hypothesis.ipynb  scVI.ipynb  split_data.ipynb
scripts/: build_bags_from_h5ad.py  evaluate.py  make_dummy_data.py  make_splits_donor_holdout.py  train.py
src/scmil_residual/: data.py  utils.py
src/scmil_residual/audit/: leakage.py
src/scmil_residual/eval/: export.py  metrics.py
src/scmil_residual/models/: mil.py
src/scmil_residual/train/: engine.py  losses.py
tools/: README.md
tools/embeddings/scvi/: export_latent.py  train_scvi.py
tools/preprocess/: build_capped_h5ad.py
