[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scmil_residual"
version = "0.1.0"
description = "scMIL_residual: residualized severity MIL (+ experimental GOR) for progressive disease staging from scRNA-seq embeddings."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "scikit-learn>=1.3",
  "torch>=2.1",
]

[project.optional-dependencies]
sc = ["anndata>=0.10", "scanpy>=1.9", "scvi-tools>=1.1"]

[tool.setuptools]
package-dir = {"" = "src"}
